--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -2,8 +2,8 @@ spring.jackson.serialization.write-dates-as-timestamps=false
 
 # DATABASE
 spring.datasource.url=jdbc:mysql://mysql:3306/obo?useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
-spring.datasource.username=admin
-spring.datasource.password=123456
+spring.datasource.username=${MYSQL_USER:admin}
+spring.datasource.password=${MYSQL_ROOT_PASSWORD:123456}
 server.port=8080
 
 # HIBERNATE
