--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.profiles.active=dev
+
+#spring.datasource.username=root
+#spring.datasource.password=123456
+#spring.datasource.url=jdbc:DB_TYPE://DB_HOST/DB_NAME
+#server.port=PORT
